# AREG

./: CMakeLists.txt  README.md
AREG/: AREG.py  CMakeLists.txt
AREG/AREGMethode/: CBCT.py  IOS.py  Progress.py
AREG/AREG_Methode/: CBCT.py  IOS.py  IOSCBCT.py  Methode.py  Progress.py
AREG/Resources/UI/: AREG.ui
AREG_CBCT/: AREG_CBCT.py  AREG_CBCT.xml  CMakeLists.txt
AREG_CBCT/AREG_CBCT_utils/: ResamplePreASO.py  __init__.py  utils.py
AREG_CBCT/utils/: Net.py  utils.py
AREG_IOS/: AREG_IOS.py  AREG_IOS.xml  CMakeLists.txt
AREG_IOS/AREG_IOS_utils/: __init__.py  icp.py  pre_icp.py  utils.py
AREG_IOS/utils/: data_file.py  icp.py  pre_icp.py
